# taskchampion-rb

./: .gitignore  .rubocop.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gemfile  README.md  Rakefile  example.md  taskchampion-0.2.0.gem  taskchampion-rb.gemspec  taskchampion.gemspec  test_phase2_validation.rb
.claude/: settings.local.json
.github/workflows/: main.yml
docs/: ANNOTATION_IMPLEMENTATION.md  API_REFERENCE.md  THREAD_SAFETY.md  TaskchampionRbErrors.md  breakthrough.md  date_conversion_analysis.md  description.md  errors.md  phase_3_plan.md  plan.md  post_upstream_fix_migration.md
examples/: basic_usage.rb  pending_tasks.rb  sync_workflow.rb  undo_demo.rb
ext/taskchampion/: Cargo.toml  extconf.rb
ext/taskchampion/src/: access_mode.rs  annotation.rs  dependency_map.rs  error.rs  lib.rs  operation.rs  operations.rs  replica.rs  status.rs  tag.rs  task.rs  task_data.rs  thread_check.rs  util.rs  working_set.rs
lib/: taskchampion.rb
lib/taskchampion/: version.rb
sig/: taskchampion.rbs
test/: test_access_mode.rb  test_basic_functionality.rb  test_error_handling.rb  test_helper.rb  test_operations.rb  test_pending_tasks.rb  test_replica.rb  test_status.rb  test_task.rb  test_task_data.rb  test_undo.rb
test/integration/: test_sync_operations.rb  test_task_lifecycle.rb  test_working_set.rb
test/performance/: test_thread_safety.rb
test/unit/: test_access_mode.rb  test_error_handling.rb  test_operations.rb  test_status.rb
